--- a/HTML CSS/src/introductionhtml/style.css
+++ b/HTML CSS/src/introductionhtml/style.css
@@ -25,3 +25,26 @@ section{
     border: 2px solid darkblue;
     padding: 10px;
 }
+
+table{
+    border: 2px solid darkblue;
+}
+
+table, td, tr, th {
+    border: 1px solid #000000;
+    border-collapse: collapse;
+}
+
+td, th {
+    padding: 10px;
+}
+
+.bold {
+    font-weight: bold;
+    text-align: center;
+}
+.result {
+    width: 400px;
+    text-align: right;
+    padding-right: 5px;
+}
